--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -75,11 +75,15 @@ jobs:
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -input=false
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
 
-      # # Checks that all Terraform configuration files adhere to a canonical format
+      - name: Terraform Validate
+        run: terraform validate
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          # # Checks that all Terraform configuration files adhere to a canonical format
       # - name: Terraform Format
       #   run: terraform fmt -check
       # Generates an execution plan for Terraform
