--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ x-airflow-common: &airflow-common
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
-    - ./plugins:/opt/airflow/plugins
+    # - ./plugins:/opt/airflow/plugins
     - ./data:/opt/airflow/data
     - ./.google:/opt/airflow/google:ro
     - ./scripts:/opt/airflow/scripts
